# Flask-App

./: README.md  app.py  main_app.py  pyproject.toml
CSS/: style.css
KIM-Gallery/: .env  README.md  app.db  config.py  pyproject.toml  run.py
KIM-Gallery/kim_gallery/: __init__.py  models.py
KIM-Gallery/kim_gallery/auth/: __init__.py  forms.py  routes.py
KIM-Gallery/kim_gallery/gallery/: __init__.py  forms.py  routes.py
KIM-Gallery/kim_gallery/main/: __init__.py  forms.py  routes.py
KIM-Gallery/kim_gallery/static/css/: style.css
KIM-Gallery/kim_gallery/templates/: base.html
KIM-Gallery/kim_gallery/templates/auth/: login.html  register.html
KIM-Gallery/kim_gallery/templates/gallery/: image.html  upload.html
KIM-Gallery/kim_gallery/templates/main/: about.html  contact.html  edit_profile.html  index.html  profile.html  search.html
KIM-Gallery/migrations/versions/: 3597974d1ad2_initial_migration.py  579362b2af64_add_contact_model.py  ecd2eecd77bc_add_user_profile_image.py
Templates/: gallery.html  upload.html
gallery/: .env  pyproject.toml  run.py
gallery/app/models/: image.py
gallery/app/routes/: main.py
gallery/app/static/css/: style.css
gallery/app/templates/: base.html  edit.html  index.html  login.html  register.html  settings.html  upload.html  view.html
gallery/gallery/: __init__.py
templates/: login.html
