[tool.poetry]
name = "flask-image-gallery"
version = "0.1.0"
description = "A simple image gallery using Flask"
authors = ["KKIIIMM<hakeemmwh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"