[tool.poetry]
name = "kim-gallery"
version = "0.1.0"
description = "A Flask-based image gallery website"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"
flask-wtf = "^1.2.2"
flask-migrate = "^4.1.0"
werkzeug = "^3.1.3"
email-validator = "^2.1.0"
flask-mail = "^0.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
