[tool.poetry]
name = "gallery"
version = "0.1.0"
description = ""
authors = ["Hakeem Manwahab <hakeemmwh2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
sqlalchemy = "^2.0.38"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
